--- a/ioctl_list/configure.ac
+++ b/ioctl_list/configure.ac
@@ -29,6 +29,7 @@ AC_CHECK_HEADERS([net/if.h], [], [],
 AC_CHECK_HEADERS([termios.h])
 AC_CHECK_HEADERS([unistd.h])
 AC_CHECK_HEADERS([IOKit/serial/ioss.h])
+AC_CHECK_HEADERS([linux/usbdevice_fs.h])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
